# 3D-Placement

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
etc/pseudoCode/: record  ver1.tex
include/algorithm/: HierRTLMP.h  InitialPlacer.h  NesterovPlacer.h  Partitioner.h
include/circuit/: Chip.h  Circuit.h  D2DChip.h  Parser.h
include/dataStructures/: D2DChip.h  Die.h  Instance.h  Net.h  Pin.h  storages.h  structures.h
include/tool/: Drawer.cpp  Drawer.h  fft.h
output/: delete_images.sh  makeGif.py  record.md
output/partitionFiles/: .gitignore
src/: Chip.cpp  Partitioner.cpp  dataStructures.cpp  main.cpp
src/algorithm/: HierRTLMP.cpp  InitialPlacer.cpp  NesterovPlacer.cpp  Nestrov.cpp  do3DPlace.cpp  initialPlace.cpp  normalPlace.cpp  place.cpp
src/algorithm/RePlAce/: Replace.cpp  Replace.h  initialPlace.cpp  initialPlace.h  nesterovBase.cpp  nesterovPlace.cpp  nesterovPlace.h  placerBase.cpp  solver.h
src/circuit/: Chip.cpp  Circuit.cpp  D2DChip.cpp  Parser.cpp
src/dataStructures/: Bin.cpp  D2DChip.cpp  Die.cpp  Instance.cpp  Net.cpp  Pin.cpp
src/etc/: dbTutorial.cpp
src/tool/: Drawer.cpp  fft.cpp
test/: dbTest.cpp
test/benchmarks/iccad2022/: Problem B_case2_hidden.txt  Problem B_case3_hidden.txt
test/benchmarks/ispd18/: .gitignore
test/benchmarks/normal/: download_ispd18.sh
